processed/jira/txt/LU/LU-12447.txt
Key:        LU-12447
Summary:    Fedora28 Lustre client build failure
Link:       https://jira.whamcloud.com/browse/LU-12447
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Wang Shilong
Reporter:   Wang Shilong
Created:    Tue, 18 Jun 2019 00:37:49 +0000
Updated:    Wed, 3 Jul 2019 04:03:22 +0000
Resolved:   Wed, 3 Jul 2019 04:03:22 +0000

--- Environment ---
Fedora release 28 (Twenty Eight)

gcc (GCC) 8.0.1 20180324 (Red Hat 8.0.1-0.20)

Copyright (C) 2018 Free Software Foundation, Inc.

--- Description ---
Hit following build failure when trying to build lustre master client:

lfs.c:5571:4: error: ‘strncpy’ specified bound 4096 equals destination size [-Werror=stringop-truncation]
    strncpy(mntdir, dname, sizeof(mntdir));
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

lfs_project.c: In function ‘lfs_project_item_alloc’:
lfs_project.c:72:2: error: ‘strncpy’ specified bound 4096 equals destination size [-Werror=stringop-truncation]
  strncpy(lpi->lpi_pathname, pathname, sizeof(lpi->lpi_pathname));
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

--- Comment (pjones, Wed, 3 Jul 2019 04:03:22 +0000) ---
Landed for 2.13 and 2.12.3

--- Comment (gerrit, Wed, 3 Jul 2019 03:24:11 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/35284/

Subject: LU-12447 utils: specify correct size for lfs project buffer

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 

Commit: a7614e22b431ae3f288ab5e393dbac5a0235f5f5

--- Comment (gerrit, Fri, 21 Jun 2019 06:30:39 +0000) ---
Jian Yu (yujian@whamcloud.com) uploaded a new patch: https://review.whamcloud.com/35284

Subject: LU-12447 utils: specify correct size for lfs project buffer

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 1

Commit: 0d44a0bccf4a199c2a132e0588c43a69214ffd53

--- Comment (gerrit, Fri, 21 Jun 2019 04:37:00 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/35257/

Subject: LU-12447 utils: specify correct size for lfs project buffer

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: ffef6e3271ad1136d3ab1c2ee229b4690a6722a0

--- Comment (gerrit, Tue, 18 Jun 2019 00:51:50 +0000) ---
Wang Shilong (wshilong@ddn.com) uploaded a new patch: https://review.whamcloud.com/35257

Subject: LU-12447 utils: specify correct size for lfs project buffer

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 43b89c564ce6d642e4e45b9266f26609ce5ff796
